# 7bitConf

./: .gitignore  CMakeLists.txt  LICENSE.taocpp-PEGTL  LICENSE.taocpp-json  README.md  conanfile.py  conanfile.txt
.github/actions/cmake-build/: action.yml
.github/actions/conan-install/: action.yml
.github/workflows/: CI.yml  DevCI.yml  Linux.yml  MacOs.yml  MainCI.yml  Windows.yml
Cmake/: 7bitConfConfig.cmake.in  FindQuom.cmake  Functions.cmake  Setup.cmake
Examples/: Basic.cpp  CMakeLists.txt  CommandLineParserConfig.cpp  CustomCommandLineParserConfig.cpp  CustomConfirugationSource.cpp  CustomSettingParser.cpp  DefaultSources.cpp  EnvironmentVarsParserConfig.cpp  SettingParserConfig.cpp
Include/SevenBit/: Conf.hpp  Config.hpp
Include/SevenBit/Conf/: AppSettingsConfiguration.hpp  ChainedConfiguration.hpp  CmakeDef.hpp  CmakeDef.hpp.input  CommandLineConfiguration.hpp  CommandLineParserBuilder.hpp  CommandLineParserConfig.hpp  Configuration.hpp  ConfigurationBuilder.hpp  ConfigurationManager.hpp  ConfigurationProviderBase.hpp  EnvironmentVarsConfiguration.hpp  EnvironmentVarsParserBuilder.hpp  EnvironmentVarsParserConfig.hpp  Exceptions.hpp  Export.hpp  IConfiguration.hpp  IConfigurationBuilder.hpp  IConfigurationProvider.hpp  IConfigurationRoot.hpp  IConfigurationSource.hpp  IDeserializer.hpp  IObject.hpp  ISettingParser.hpp  ISettingSplitter.hpp  ISettingsParser.hpp  IValueDeserializers.hpp  IValueDeserializersMap.hpp  InMemoryConfiguration.hpp  Json.hpp  JsonConfiguration.hpp  JsonFileConfiguration.hpp  JsonStreamConfiguration.hpp  KeyPerConfiguration.hpp  KeyPerFileConfiguration.hpp  LibraryConfig.hpp  MapConfiguration.hpp  ObjectHolder.hpp  OptionsParserConfig.hpp  SettingParserBuilder.hpp  (+2 more)
Include/SevenBit/Conf/Details/: BoolDeserializer.hpp  CommandLineParser.hpp  Configuration.hpp  ContainerUtils.hpp  DefaultDeserializers.hpp  Deserializers.hpp  DoubleDeserializer.hpp  EnvironmentVarsParser.hpp  IDeserializer.hpp  IJsonDeserializer.hpp  IJsonTransformer.hpp  IJsonTypeTransformer.hpp  ISettingDeserializer.hpp  ISettingParser.hpp  IntDeserializer.hpp  JsonDeserializer.hpp  JsonDeserializers.hpp  JsonExt.hpp  JsonObjectExt.hpp  JsonTransformersLookup.hpp  NullDeserializer.hpp  OptionsParser.hpp  OptionsParserCfg.hpp  Require.hpp  Setting.hpp  SettingDeserializers.hpp  SettingKeySplitter.hpp  SettingParser.hpp  SettingParserConfig.hpp  SettingParserResult.hpp  SettingReader.hpp  SettingSplitter.hpp  SettingTypeSplitter.hpp  SettingsParser.hpp  StringDeserializer.hpp  StringUtils.hpp  UIntDeserializer.hpp  Utils.hpp  (+2 more)
Include/SevenBit/Config/: AppSettingsConfiguration.hpp  ChainedConfiguration.hpp  CmakeDef.hpp  CmakeDef.hpp.input  CommandLineConfiguration.hpp  Configuration.hpp  ConfigurationBuilder.hpp  ConfigurationManager.hpp  ConfigurationProviderBase.hpp  EnvironmentVarsConfiguration.hpp  Exceptions.hpp  Export.hpp  IConfiguration.hpp  IConfigurationBuilder.hpp  IConfigurationProvider.hpp  IConfigurationSource.hpp  IObject.hpp  InMemoryConfiguration.hpp  Json.hpp  JsonConfiguration.hpp  JsonFileConfiguration.hpp  JsonStreamConfiguration.hpp  KeyPerFileConfiguration.hpp  LibraryConfig.hpp  MapConfiguration.hpp  ObjectHolder.hpp  OptionsParserConfig.hpp  SettingsConfiguration.hpp
SingleHeader/: CMakeLists.txt  SevenBitConf.hpp.in  SevenBitConfig.hpp.in
Source/: CMakeLists.txt  ConfigCheck.hpp  Source.cpp
Tests/: AppSettingsConfigurationTest.cpp  CMakeLists.txt  ChainedConfigurationTest.cpp  CommandLineConfigurationTest.cpp  ConfigurationBuilderTest.cpp  ConfigurationTest.cpp  DeserializersTest.cpp  EnvironmentVarsConfigurationTest.cpp  InMemoryConfigurationTest.cpp  JsonConfigurationTest.cpp  JsonFileConfigurationTest.cpp  JsonObjectExtTest.cpp  JsonStreamConfigurationTest.cpp  KeyPerConfigurationTest.cpp  KeyPerFileConfigurationTest.cpp  MapConfigutationTest.cpp  OptionsParserTest.cpp  SettingConfigutationTest.cpp  SettingKeySplitterTest.cpp  SettingParserBuilderTest.cpp  SettingParserTest.cpp  SettingParserTestcopy.cpp  SettingSplitterTest.cpp  UtilsTest.cpp
Tests/Classes/: CustomConfigSource.hpp
Tests/E2E/: CMakeLists.txt  echo.cpp  echoTestData.json  echo_test.py
Tests/EndToEnd/: CMakeLists.txt  echo.cpp  echoTestData.json  echo_test.py
Tests/EndToEnd/Cli/: echo.cpp  test.py  testData.json
Tests/Helpers/Classes/: CustomConfigSource.hpp
Tests/Helpers/Files/: appsettings.dev.json  appsettings.json
Tests/Helpers/Files/Directory/: settingOne.json  settingTwo.json
Tests/Helpers/Mocks/: ConfigurationBuilderMock.hpp  DeserializerMock.hpp  ValueDeserializersMapMock.hpp
Tests/Helpers/Utilities/: ParamsTest.hpp
Tests/Integration/: CMakeLists.txt  ConfigurationTest.cpp
Tests/Mocks/: ConfigurationBuilderMock.hpp  DeserializerMock.hpp  SettingSplitterMock.hpp  ValueDeserializersMapMock.hpp
Tests/Unit/: AppSettingsConfigurationTest.cpp  CMakeLists.txt  CommandLineConfigurationTest.cpp  CommandLineParserBuilderTest.cpp  CommandLineParserTest.cpp  ConfigurationBuilderTest.cpp  ConfigurationTest.cpp  DeserializersTest.cpp  EnvironmentVarsConfigurationTest.cpp  EnvironmentVarsParserBuilderTest.cpp  JsonConfigurationTest.cpp  JsonFileConfigurationTest.cpp  JsonStreamConfigurationTest.cpp  KeyPerFileConfigurationTest.cpp  MapConfigutationTest.cpp  ObjectHolderTest.cpp  RunTests.cpp  SettingParserBuilderTest.cpp  SettingParserTest.cpp  SettingSplitterTest.cpp  TestTemplate.cpp  UtilsTest.cpp
Tests/Unit/Details/: CommandLineParserTest.cpp  ContainerUtilsTest.cpp  DeserializersTest.cpp  EnvironmentVarsParserTest.cpp  JsonExtTest.cpp  JsonObjectExtTest.cpp  RequireTest.cpp  SettingSplitterTest.cpp  StringUtilsTest.cpp  UtilsTest.cpp  ValueDeserializersMapTest.cpp
Tests/Unit/Sources/: AppSettingsConfigurationTest.cpp  ChainedConfigurationTest.cpp  CommandLineConfigurationTest.cpp  EnvironmentVarsConfigurationTest.cpp  InMemoryConfigurationTest.cpp  JsonConfigurationTest.cpp  JsonFileConfigurationTest.cpp  JsonStreamConfigurationTest.cpp  KeyPerFileConfigurationTest.cpp  MapConfigutationTest.cpp
Tests/Utilities/: ParamsTest.hpp
(+91 files in other folders)
