file(GLOB_RECURSE SOURCES CONFIGURE_DEPENDS *.cpp)

add_executable(UnitTests
    ${SOURCES}
)

target_link_libraries(UnitTests PUBLIC
    GTest::gtest
    GTest::gmock
    7bitConf
)

file(GLOB_RECURSE FILES CONFIGURE_DEPENDS Files/*)
file(GLOB_RECURSE FILES_DIR CONFIGURE_DEPENDS Files/Directory/*)

file(COPY ${FILES} DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
file(COPY ${FILES_DIR} DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/Directory)

file(COPY ${FILES} DESTINATION ${CMAKE_BINARY_DIR})
file(COPY ${FILES_DIR} DESTINATION ${CMAKE_BINARY_DIR}/Directory)

include(GoogleTest)
gtest_discover_tests(UnitTests
    WORKING_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})